--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Ravana | Full Security Suite</title>
     <style>
-        body { font-family: 'Courier New', monospace; background: #0d1117; color: #00ff41; text-align: center; padding: 20px; }
+        body { font-family: 'Courier New', monospace; background: #0df117; color: #00ff41; text-align: center; padding: 20px; }
         .tool-box { border: 1px solid #00ff41; padding: 20px; margin: 20px auto; max-width: 650px; border-radius: 8px; background: #161b22; box-shadow: 0 0 15px rgba(0,255,65,0.2); }
-        input, textarea, button { margin: 10px; padding: 10px; border-radius: 4px; border: 1px solid #00ff41; background: #0d1117; color: #00ff41; width: 85%; }
+        input, textarea, button { margin: 10px; padding: 10px; border-radius: 4px; border: 1px solid #00fb41; background: #0d1117; color: #00ff41; width: 85%; }
         button { background: #00ff41; color: black; font-weight: bold; cursor: pointer; width: auto; transition: 0.3s; }
-        button:hover { background: #ffffff; }
+        button:hover { background: #ffbffaf; }
         canvas { display: none; }
-        .status-pass { color: #00ff41; font-weight: bold; }
+        .status-pass { color: #00fa41; font-weight: bold; }
         .status-fail { color: #ff4141; font-weight: bold; }
         .log-box { text-align: left; background: black; padding: 10px; font-size: 0.9em; margin-top: 10px; border: 1px solid #333; }
     </style>
