Refactor CSS for improved styling and effects

--- a/index.html
+++ b/index.html
@@ -4,117 +4,159 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Ravana | Full Security Suite</title>
+<style>
 
-body { 
-    font-family: 'Orbitron', 'Courier Prime', monospace; 
-    background: radial-gradient(circle at center, #0a1a0f 0%, #000 100%); 
-    color: #00ff41; 
-    text-align: center; 
-    padding: 20px; 
-    margin: 0;
-    overflow-x: hidden;
-    /* 3D Perspective for the whole page */
-    perspective: 1000px;
+:root {
+    --neon-green: #00ff41;
+    --dark-void: #050a06;
+    --glass-bg: rgba(10, 25, 15, 0.75);
+    --glow-strength: 0 0 15px rgba(0, 255, 65, 0.4);
+    --transition-speed: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-/* Animated Scanning Line Effect */
-body::before {
+body {
+    background-color: var(--dark-void);
+    background-image: 
+        radial-gradient(circle at 50% 50%, #0a2a12 0%, #000 80%),
+        linear-gradient(rgba(0, 255, 65, 0.05) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(0, 255, 65, 0.05) 1px, transparent 1px);
+    background-size: 100% 100%, 30px 30px, 30px 30px;
+    color: var(--neon-green);
+    font-family: 'JetBrains+Mono', monospace;
+    perspective: 1500px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    margin: 0;
+}
+
+/* Holographic Scanline Overlay */
+body::after {
     content: " ";
     position: fixed;
-    top: 0; left: 0; bottom: 0; right: 0;
-    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
-                linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-    background-size: 100% 2px, 3px 100%;
-    z-index: 100;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 255, 65, 0.05) 50%);
+    background-size: 100% 4px;
+    z-index: 999;
     pointer-events: none;
+    animation: scanline 10s linear infinite;
 }
 
-.tool-box { 
-    border: 1px solid rgba(0, 255, 65, 0.5); 
-    padding: 40px; 
-    margin: 50px auto; 
-    max-width: 850px; 
-    border-radius: 15px; 
-    /* Glassmorphism Effect */
-    background: rgba(22, 27, 34, 0.7); 
-    backdrop-filter: blur(10px);
-    box-shadow: 0 10px 30px rgba(0, 255, 65, 0.1), inset 0 0 15px rgba(0,255,65,0.05); 
-    /* 3D Tilt Effect */
-    transform: rotateX(5deg);
-    transition: transform 0.5s ease;
+@keyframes scanline {
+    from { background-position: 0 0; }
+    to { background-position: 0 100%; }
+}
+
+/* 3D Floating Tool Box */
+.tool-box {
+    position: relative;
+    padding: 50px;
+    max-width: 800px;
+    background: var(--glass-bg);
+    backdrop-filter: blur(15px) saturate(180%);
+    border: 1px solid rgba(0, 255, 65, 0.3);
+    border-radius: 20px;
+    box-shadow: var(--glow-strength), inset 0 0 20px rgba(0, 255, 65, 0.1);
+    transform-style: preserve-3d;
+    animation: float3D 6s ease-in-out infinite;
+    transition: transform var(--transition-speed);
+}
+
+@keyframes float3D {
+    0%, 100% { transform: translateY(0px) rotateX(5deg) rotateY(-2deg); }
+    50% { transform: translateY(-20px) rotateX(-5deg) rotateY(2deg); }
 }
 
 .tool-box:hover {
-    transform: rotateX(0deg) scale(1.01);
+    animation-play-state: paused;
+    transform: rotateX(0deg) rotateY(0deg) scale(1.02);
+    border-color: var(--neon-green);
 }
 
-h1, h2 {
+/* Header Text with 3D Depth */
+h1 {
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 900;
+    font-size: 2.5rem;
     text-transform: uppercase;
-    letter-spacing: 4px;
-    text-shadow: 0 0 10px #00ff41, 0 0 20px #00ff41;
+    letter-spacing: 8px;
+    color: #fff;
+    text-shadow: 
+        0 0 10px var(--neon-green),
+        0 0 20px var(--neon-green),
+        0 5px 0px #008f25;
+    margin-bottom: 30px;
 }
 
-input, textarea { 
-    margin: 15px; 
-    padding: 12px; 
-    border-radius: 8px; 
-    border: 1px solid #00ff41; 
-    background: rgba(13, 17, 23, 0.8); 
-    color: #00ff41; 
-    width: 85%; 
-    font-family: 'Courier Prime', monospace;
-    box-shadow: inset 0 0 5px rgba(0,255,65,0.2);
-    transition: 0.3s;
+/* Stunning Interactive Inputs */
+input, textarea {
+    background: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 255, 65, 0.2);
+    border-left: 4px solid var(--neon-green);
+    color: #fff;
+    padding: 15px;
+    margin: 10px 0;
+    width: 90%;
+    border-radius: 4px;
+    transition: all 0.3s ease;
 }
 
 input:focus {
     outline: none;
-    box-shadow: 0 0 15px rgba(0,255,65,0.5);
-    border-color: #fff;
+    background: rgba(0, 255, 65, 0.05);
+    box-shadow: -5px 0 15px rgba(0, 255, 65, 0.3);
+    width: 95%;
 }
 
-button { 
-    background: #00ff41; 
-    color: #000; 
+/* Professional 3D "Press" Button */
+button {
     font-family: 'Orbitron', sans-serif;
-    font-weight: 900; 
-    padding: 12px 30px;
-    border-radius: 5px;
-    cursor: pointer; 
-    width: auto; 
-    transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
+    background: var(--neon-green);
+    color: #000;
     border: none;
+    padding: 15px 40px;
+    font-weight: 900;
+    border-radius: 8px;
+    cursor: pointer;
     text-transform: uppercase;
-    box-shadow: 0 5px 0 #008f25;
+    margin-top: 20px;
+    box-shadow: 0 6px 0 #008f25, 0 10px 20px rgba(0, 255, 65, 0.3);
+    transition: all 0.1s ease;
+    position: relative;
 }
 
-button:hover { 
-    background: #00ff41; 
-    transform: translateY(-3px);
-    box-shadow: 0 8px 20px rgba(0, 255, 65, 0.4), 0 8px 0 #008f25;
+button:hover {
+    background: #4dff81;
+    transform: translateY(-2px);
+    box-shadow: 0 8px 0 #008f25, 0 15px 25px rgba(0, 255, 65, 0.4);
 }
 
 button:active {
-    transform: translateY(2px);
+    transform: translateY(4px);
     box-shadow: 0 2px 0 #008f25;
 }
 
-.log-box { 
-    text-align: left; 
-    background: rgba(0, 0, 0, 0.8); 
-    padding: 15px; 
-    font-size: 0.85em; 
-    margin-top: 20px; 
-    border-left: 3px solid #00ff41; 
-    max-height: 200px; 
-    overflow-y: auto; 
-    border-radius: 0 8px 8px 0;
-}
+/* Dynamic Status Elements */
+.status-pass { color: #fff; text-shadow: 0 0 10px var(--neon-green); font-weight: bold; }
+.status-fail { color: #ff4141; text-shadow: 0 0 10px #ff0000; font-weight: bold; }
 
-/* Scrollbar Styling */
-::-webkit-scrollbar { width: 5px; }
-::-webkit-scrollbar-track { background: #0d1117; }
-::-webkit-scrollbar-thumb { background: #00ff41; border-radius: 10px; }
+/* Elegant Terminal Log */
+.log-box {
+    background: rgba(0, 0, 0, 0.9);
+    border: 1px solid #1a3a20;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 30px;
+    text-align: left;
+    font-size: 0.9rem;
+    height: 150px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--neon-green) transparent;
+}
+</style>
 
 </head>
 <body>
